module(
    name = "openconfig_bootz",
)

bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc", version = "1.65.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "27.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.48.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "openconfig_gnsi", version = "1.6.0")
bazel_dep(name = "openconfig_gnmi", version = "0.11.0")

# grpc-java is only included to fix "bazel mod graph".
bazel_dep(name = "grpc-java", version = "1.64.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_coredhcp_coredhcp", "com_github_golang_glog", "com_github_golang_protobuf", "com_github_google_go_cmp", "com_github_h_fam_errdiff", "com_github_insomniacslk_dhcp", "org_golang_google_grpc", "org_golang_google_grpc_cmd_protoc_gen_go_grpc", "org_golang_google_protobuf", "org_mozilla_go_pkcs7")

#go_deps.gazelle_override(
#    build_file_generation = "clean",
#    path = "github.com/h-fam/errdiff",
#)

# https://github.com/bazelbuild/bazel-gazelle/pull/1802 required for clean
# build_file_generation
git_override(
    module_name = "gazelle",
    commit = "7d10bf7befce477f518056cfc502939000bea3fa",
    remote = "https://github.com/bazelbuild/bazel-gazelle",
)

git_override(
    module_name = "openconfig_gnsi",
    commit = "a6199a88de259f7bfe842ff511a34a7904dbddb6",
    remote = "https://github.com/bstoll/gnsi",
)

git_override(
    module_name = "openconfig_gnmi",
    commit = "0d79d0ecd941a8d7bc3dff55d5304dc9096370c0",
    remote = "https://github.com/bstoll/gnmi",
)
